# Mini-3D-Scanner

./: .gitignore  CMakeLists.txt  README.md  package.xml  printer-fb-messenger-bot.git
launch/: debug.launch  pipeline.launch
src/: kinect2_emulator.cpp  open3d_processing.py  pcl_processing.cpp  rotation_dir.cpp  setup.cpp  showRegResultOnline.cpp
